--- a/proposal.tex
+++ b/proposal.tex
@@ -32,6 +32,7 @@
 \externaldocument{proposedwork}
 \externaldocument{pwp}
 \externaldocument{quasiquotation}
+\externaldocument{metasyntacticvariables}
 \externaldocument{relatedtermskeywords}
 \externaldocument{relatedWork}
 \externaldocument{ummcpp}
@@ -289,7 +290,10 @@
 		
 	\subfile{quasiquotation}
 	\clearpage
-		
+	
+	\subfile{metasyntacticvariables}
+	\clearpage
+	
 	\subfile{relatedtermskeywords}
 	\clearpage
 		
