Edited Prototype 1 Documentation

--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -4,6 +4,16 @@
 
 \section{Meta Syntactic Variables}\label{sect:metasyntacticvariables}
 
+Some sources for the topic 
+
+https://en.wikipedia.org/wiki/Metasyntactic_variable
+
+http://www.catb.org/jargon/html/M/metasyntactic-variable.html
+
+http://whatis.techtarget.com/definition/metasyntactic-variable
+
+
 
 
 \end{document}
+ 
