--- a/proto1.tex
+++ b/proto1.tex
@@ -36,7 +36,7 @@ For dynamic typing
 \end{enumerate}
 
 \paragraph{Transitional paragraph}
-hello
+This prototype 
 
 
 To start with, replicating the single type "term" in \progLang{Prolog} one must consider the distinct constructs it can be associated to 
