Added some content for monads as control flow modellers

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1196,3 +1196,38 @@ url = {https://wiki.haskell.org/Haskell_in_industry}
   year={2004},
   publisher={Cambridge Univ Press}
 }
+@misc{website:paulspontifications,
+title = {Why Haskell is Good for Embedded Domain Specific Languages},
+author = {Paul Johnson},
+month = {January},
+year = {2008},
+url = {http://paulspontifications.blogspot.ca/2008/01/why-haskell-is-good-for-embedded-domain.html}
+}
+@misc{website:monadascomputation,
+title = {Monads as computation},
+author = {Haskell Wiki},
+month = {December},
+year = {2011},
+url = {https://wiki.haskell.org/Monads_as_computation}
+}
+@misc{website:controlflowwiki,
+title = {Control Flow},
+author = {Wikipedia},
+month = {August},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Control_flow}
+}
+@misc{website:controlflowdalhousie,
+title = {Control Flow},
+author = {Dalhousie University},
+month = {January},
+year = {2012},
+url = {https://web.cs.dal.ca/~nzeh/Teaching/3136/Notes/control-flow.pdf}
+}
+@misc{website:declarativeprogrammingwiki,
+title = {Declarative Programming},
+author = {Wikipedia},
+month = {September},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Declarative_programming}
+}
