--- a/hwh.tex
+++ b/hwh.tex
@@ -6,59 +6,43 @@
 \section{Haskell or Why Haskell ?}\label{sect:hwh}
 % ---------------------------------------------------------------------------
 
-
-
-
-
-
-
-
+\par This chapter discusses the properties of the host language \progLang{Haskell} and mainly the feature set it provides for embedding 
+domain specific languages(EDSLs).
 
 Haskell / Why Haskell ?
 \begin{enumerate}
+
 \item \progLang{Haskell} as a functional programming language
 
 Haskell is an advanced purely-functional programming language. In particular, it is a polymorphically statically typed, lazy, purely 
 functional language \cite{website:haskellwiki}. It is one of the popular functional programming languages \cite{website:langpop}. 
 \progLang{Haskell} is widely used in the industry \cite{website:haskellinindustry}. 
 
-
-
-
-
-
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\item Haskell as a tool for embedding domain specific languages
+\item Haskell as a tool for embedding domain specific languages\cite{website:paulspontifications}
 
 
 \begin{enumerate}
 \item Monads
 \newline  
+Control flow defines the order/ manner of execution of statements in a program\cite{website:controlflowwiki}. The specification is set by 
+the programming language. Generally, in the case of imperative languages the control flow is sequential while for a functional language
+is recursion \cite{website:controlflowdalhousie}. For example, \progLang{Java} has a top down sequential execution approach. The 
+declarative style consists of defining components of programs i.e. computations not a control 
+flow\cite{website:declarativeprogrammingwiki}.     
+
+This is where \progLang{Haskell} shines by providing something called a \textit{monad}. Functional Programming Languages define 
+computations which then need to be ordered in some way to form a combination. \cite{website:monadascomputation}    
+
+\begin{comment}
 Each language has a flow of control, a model how programs are executed. Many languages for example \progLang{Java} have a top-down 
 sequential execution approach. But very few languages allow control flow modelling, for example in a functional language how the 
 propagation of side effects is handled. A monad provides the ability to customize and develop your own model from one step to another, how 
-side effects are handled.         
+side effects are handled. \cite{website:paulspontifications}        
+\end{comment}
 
 \end{enumerate}
 
-http://paulspontifications.blogspot.ca/2008/01/why-haskell-is-good-for-embedded-domain.html
-
+ 
 
 
 
