--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -5,12 +5,11 @@
 \section{Meta Syntactic Variables}\label{sect:metasyntacticvariables}
 
 Some sources for the topic 
+\url{https://en.wikipedia.org/wiki/Metasyntactic_variable}
 
-https://en.wikipedia.org/wiki/Metasyntactic_variable
+\url{http://www.catb.org/jargon/html/M/metasyntactic-variable.html}
 
-http://www.catb.org/jargon/html/M/metasyntactic-variable.html
-
-http://whatis.techtarget.com/definition/metasyntactic-variable
+\url{http://whatis.techtarget.com/definition/metasyntactic-variable}
 
 
 
