Polished Chapter 15 Haskell or Why Haskell ?

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1231,3 +1231,50 @@ month = {September},
 year = {2015},
 url = {https://en.wikipedia.org/wiki/Declarative_programming}
 }
+@incollection{meyer2008eiffel,
+  title={Eiffel as a framework for verification},
+  author={Meyer, Bertrand},
+  booktitle={Verified Software: Theories, Tools, Experiments},
+  pages={301--307},
+  year={2008},
+  publisher={Springer}
+}
+@inproceedings{jones2001composing,
+  title={Composing contracts: An adventure in financial engineering},
+  author={Jones, Simon L Peyton and Eber, Jean-Marc and Seward, Julian},
+  booktitle={FME},
+  volume={2021},
+  pages={435},
+  year={2001}
+}
+@incollection{morrison1990persistent,
+  title={Persistent languages and architectures},
+  author={Morrison, R and Atkinson, MP},
+  booktitle={Security and Persistence},
+  pages={9--28},
+  year={1990},
+  publisher={Springer}
+}
+@inproceedings{driscoll1986making,
+  title={Making data structures persistent},
+  author={Driscoll, James R and Sarnak, Neil and Sleator, Daniel Dominic and Tarjan, Robert Endre},
+  booktitle={Proceedings of the eighteenth annual ACM symposium on Theory of computing},
+  pages={109--121},
+  year={1986},
+  organization={ACM}
+}
+@misc{website:persistentdatastructuresmit,
+title = {Persistent Data Structures},
+author = {David Karger},
+month = {September},
+year = {2005},
+url = 
+{http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-854j-advanced-algorithms-fall-2005/lecture-notes/persistent.pdf}
+}
+@misc{website:haskelllazinesswiki,
+title = {Haskell/Laziness},
+author = {Haskell Wiki},
+month = {November},
+year = {2014},
+url = {https://en.wikibooks.org/wiki/Haskell/Laziness}
+}
