Added to do file.

--- a/proposal.tex
+++ b/proposal.tex
@@ -333,6 +333,9 @@
   	\subfile{conclusion}
 	\clearpage
 
+  	\input{toDo}
+	\clearpage
+
 
 %   ==========================================================================
 %   Wrap up the document with the Bibliography (looks for the specified .bib)
