Updated to do list.

--- a/toDo.tex
+++ b/toDo.tex
@@ -6,7 +6,8 @@
 %%
 %%      Description:  Work to do.
 
-
+\begin{scope}
+\nolinenumbers
 % ---------------------------------------------------------------------------
 \section{Editing to do}\label{sect:to-do}
 % ---------------------------------------------------------------------------
@@ -24,6 +25,56 @@
   Check the rules for spacing in the bibliography to ensure that we have
   them right.
   
+\item [\textbf{Mehul}]
+
+\item
+  \textcolor{red}{Rewrite (Section) Chapter 3.2}\,.
+  You are now in a position to state what your contributions are.
+  In some sense everything else flows around this.
+
+\item
+  Fix the reference at the bottom of page~2:\\
+  \Verb!citewikipro- log,somogyi1995logic,website:prolog1000db.!
+\item
+  Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
+  what material is needed in Chapters~ \ref{sect:quasiquotation},
+  \ref{sect:metasyntacticvariables},
+  and~\ref{sect:relatedtermskeywords}.
+\item
+  {}[\TeX{}nical]
+  Remove the \Verb!\paragraph{}!s from the running text.  \LaTeX{}
+  ends a paragraph every time that it encounters two end-of-lines
+  with only whitespace between them.  \Verb!\par! does the same thing.
+
+  The \Verb!\paragraph! command is in the same family as \Verb!chapter!,
+  \Verb!\section!, and so on.  For its correct use, see later in this
+  file.
+
+  If you don't like the shape of the paragraphs that you get without
+  \Verb!paragraph!, use something like
+  \begin{Verbatim}
+\setlength{\parindent}{3em}
+\setlength{\parskip}{2\baselineskip}
+  \end{Verbatim}
+  to adjust either the initial paragraph indent, or the inter-paragraph
+  space.
+
+\item
+  Rewrite (Section) Chapter 3 in formal English.
+
+\item
+  Bump the sectioning levels up by one.  That is, what is currently a
+  section should become a chapter, what is currently a subsection should
+  become a section, and so on.  It may not make sense to do this until
+  you have switch to \Verb!thesis.sty!\,.
+
+\item
+  ``re-curses'' means to swear again (\textit{p} 9).
+\item
+  I am not sure that I agree with the use of ``reflective'' on
+  \textit{p}~8 (\textit{l}~25).  Reflection often means run-time
+  introspection (for instance the Java \Verb!.getClass()! method).
+  
 \item [\textbf{David}]
 \item Review Chapter 1
 \item Review Chapter 2
@@ -35,15 +86,7 @@
 \item Review Chapter 8
 \item Review Chapter 18
 
-\item [\textbf{Mehul}]
-\item
-  Fix the reference at the bottom of page~2:
-  \Verb!citewikipro- log,somogyi1995logic,website:prolog1000db.!
-\item
-  Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
-  what material is needed in Chapters~ \ref{sect:quasiquotation},
-  \ref{sect:metasyntacticvariables},
-  and~\ref{sect:relatedtermskeywords}.
+\end{enumerate}
 
 \subsection{Editing suggestions from David}\label{sec:edit-sugg-david}
 
@@ -70,7 +113,34 @@ don't know what the problem statement is at the end of it.
 
 \paragraph{Thoughts on 1.4}
 
-Rename to 
+Rename to ``Thesis Organization''.
+
+\paragraph{Thoughts on Chapter 2}
+
+Here are some potential keywords from Chapter 2:
+\begin{inparaitem}
+\item Hindley-Milner type systems
+\item Horn clauses
+\item \(\lambda\)-calculi
+\item \textsc{Haskell}
+\item \textsc{Scala}
+\item declarative programming languages
+\item foreign function interfaces
+\item functional programming
+\item implementing Prolog in other languages
+\item language embedding
+\item language families
+\item language paradigms
+\item logic programming
+\item meta-programming
+\item monads
+\item paradigm integration
+\item quasi-quotation
+\item the typed \(\lambda\)-calculus
+\item the untyped \(\lambda\)-calculus
+\end{inparaitem}.
+
+What is the overall message?
 
 
-\end{enumerate}
+\end{scope}
