ncorporated some changes from todo

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1278,3 +1278,10 @@ month = {November},
 year = {2014},
 url = {https://en.wikibooks.org/wiki/Haskell/Laziness}
 }
+@misc{website:comparisonofprologimplementationswiki,
+title = {Comparison of Prolog implementations},
+author = {Wikipedia},
+month = {August},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Comparison_of_Prolog_implementations}
+}
