--- a/hwh.tex
+++ b/hwh.tex
@@ -6,6 +6,8 @@
 \section{Haskell or Why Haskell ?}\label{sect:hwh}
 % ---------------------------------------------------------------------------
 
+In this chapter we discuss the properties of \progLang{Haskell} 
+
 \par This chapter discusses the properties of the host language \progLang{Haskell} and mainly the feature set it provides for embedding 
 domain specific languages(EDSLs).
 
