--- a/pwp.tex
+++ b/pwp.tex
@@ -7,13 +7,28 @@
 % ---------------------------------------------------------------------------
 \section{Prolog or Why Prolog ?}\label{sect:pwp}
 % ---------------------------------------------------------------------------
+%Prolog / Why Prolog ?
 
+This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
+language to extend its capabilities.
 
-
-Prolog / Why Prolog ?
 \begin{enumerate}
+
+
 \item \progLang{Prolog} as a logic programming language.
 
+\paragraph{}
+\progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and computational linguistics.  
+It is a Declarative language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
+between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}. \progLang{Prolog} is very popular and has a number of 
+implementations \cite{website:comparisonofprologimplementationswiki} for different purposes. 
+
+
+
+\item Why embed \progLang{Prolog} ?
+
+
+\begin{comment}
 http://eliminatingwork.blogspot.ca/2010/02/why-prolog-is-by-far-best-most.html 
 
 
@@ -85,12 +100,7 @@ Sql programmers don't think about code refactoring - there's only one way to do 
 conclusion :- prolog_rules.
 prolog_rules :- write("Prolog is by far the best, most productive, easiest programming language ever").
 \end{minted}
-
-
-
-\item Why embed \progLang{Prolog} ?
-
-
+\end{comment}
 
 \end{enumerate}
 
