--- a/introduction.tex
+++ b/introduction.tex
@@ -24,9 +24,9 @@ Functional Programming Language and \progLang{Prolog}, a Logical Programming Lan
 
 \subsection{Thesis Statement}
 \paragraph{} 
-The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and \progLang{Prolog} by embedding the latter 
-into the former and analysing the result of doing so as they have conflicting characteristics. The finished product will be something like a \textit{haskellised}
- \progLang{Prolog} which has logical programming like capabilities.       
+The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and \progLang{Prolog} by embedding 
+the latter into the former and analysing the result of doing so as they have conflicting characteristics. The finished product will be 
+something like a \textit{haskellised} \progLang{Prolog} which has logical programming like capabilities.       
 
 
 %----------------------------------------------------------------------------
@@ -54,25 +54,27 @@ logic,website:prolog1000db}. But there are a lot of good things about \progLang{
 for search problems. 
 \end{comment}
 
-\par \progLang{Prolog} is a language that has a hard time being adopted. Born in an era where procedural languages were receiving a lot of attention, it 
-suﬀered from competing against another new kid on the block: \progLang{C}. Some of the problems were of its own making. Basic features like modules 
-were not provided by all compilers. Practical features for real world problems were added in an ad hoc way resulting in the loss of its purely declarative 
-charm. Some say that \progLang{Prolog} is fading away, \cite{website:prolog-steam,website:prolog-death,website:prolog-killer}. It is apparently not 
-used for building large programs cite{wikiprolog,somogyi1995logic,website:prolog1000db}. However there are a lot of good things about Prolog: it is 
-ideal for search problems; it has a simple syntax, and a strong underlying theory. It is a language that should not die away. 
+\par \progLang{Prolog} is a language that has a hard time being adopted. Born in an era where procedural languages were receiving a lot of 
+attention, it suﬀered from competing against another new kid on the block: \progLang{C}. Some of the problems were of its own making. Basic 
+features like modules were not provided by all compilers. Practical features for real world problems were added in an ad hoc way resulting 
+in the loss of its purely declarative charm. Some say that \progLang{Prolog} is fading away, 
+\cite{website:prolog-steam,website:prolog-death,website:prolog-killer}. It is apparently not used for building large programs 
+\cite{wikiprolog,somogyi1995logic,website:prolog1000db}. However there are a lot of good things about Prolog: it is ideal for search 
+problems; it has a simple syntax, and a strong underlying theory. It is a language that should not die away. 
 
 \noindent So the question is how to have all the good qualities of \textsc{Prolog} without actually using \progLang{Prolog}?  
 
-\par Well one idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand. Here the choice is \progLang{
-Haskell}; as both the languages are declarative they share a common background which can help to blend the two.
+\par Well one idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand. Here the choice is 
+\progLang{Haskell}; as both the languages are declarative they share a common background which can help to blend the two.
 
 \par Generally speaking, programming languages with a wide scope over problem domains do not provide bespoke support for accomplishing even 
 mundane tasks. Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as the master key. 
 
-\par Flipping the coin to the other side we see, the more specific the language is to the problem domain the easier it is to solve the problem. The simple 
-reason being that, the problem need not be moulded according to the capability  of the language. For example a problem with a naturally recursive 
-solution cannot take advantage of tail recursion in many imperative languages. Many problems require the system to be mutation free, but have to deal 
-with uncontrolled side-effects and so on.  
+\par Flipping the coin to the other side we see, the more specific the language is to the problem domain the easier it is to solve the 
+problem. The simple reason being that, the problem need not be moulded according to the capability  of the language. For example a problem 
+with a naturally recursive 
+solution cannot take advantage of tail recursion in many imperative languages. Many problems require the system to be mutation free, but 
+have to deal with uncontrolled side-effects and so on.  
 
 \par Putting all of the above together, Domain Specific Languages are pretty good in doing what they are designed to do, but nothing else, resulting in 
 choosing a different language every time. On the other hand, a general purpose language can be used for solving a wide variety of problems but many a 
