--- a/proposal.tex
+++ b/proposal.tex
@@ -22,7 +22,7 @@
 \usepackage{xr}
 \usepackage{etoolbox}
 
-%\usepackage[pagewise]{lineno}
+\usepackage[pagewise]{lineno}
 \usepackage{fancyvrb}
 \usepackage{paralist}
 \newenvironment{scope}{}{}
@@ -147,7 +147,7 @@
         \input{abstract.tex}
 	\end{frontmatter}
 
-%\linenumbers
+\linenumbers
 
 %   ==========================================================================
 %   Begin main matter (pages are numbered with arabic numerals)
