--- a/proto1.tex
+++ b/proto1.tex
@@ -5,11 +5,14 @@
 
 \section{Prototype 1}{\label{proto1}}
 
+\begin{comment}
 This chapter looks into solving the issue of conflicting type systems of the languages in question. \progLang{Haskell} is a strong 
 statically typed language requiring type signature for programming constructs at compile time while \progLang{Prolog} is strong dynamically 
 typed which lets through untyped programs. This prototype throws light on the process of tackling the issues involved in creating 
 a data type to replicate the target language type system while conforming to the host language restrictions and also utilizing the 
 benefits.       
+\end{comment}
+This chapter discusses 
 
 
 \subsection{Creating a data type}
@@ -144,7 +147,9 @@ instance Applicative (FlatTerm) where
 After flattening do fixing,
  
 
-Opening up the language somehow so as to accommodate your own variables .
+Opening up the language somehow so as to accommodate your own variables.
+
+
 
 
 
