added some content to proto1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1285,3 +1285,10 @@ month = {August},
 year = {2015},
 url = {https://en.wikipedia.org/wiki/Comparison_of_Prolog_implementations}
 }
+@misc{data-fix-lib,
+title = {data-fix},
+author = {Anton Kholomiov},
+month = {February},
+year = {2013},
+url = {https://hackage.haskell.org/package/data-fix}
+}
