--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -65,7 +65,10 @@ flattening language
 opening up the language (binding monad)
 adding custom variables
 monadic unification (stuff happens in a bubble)
-rec type -> non rec type -> fix non rec type isomorphically == rec type
+rec type $\rightarrow$ non rec type $\rightarrow$ fix non rec type isomorphically == rec type
+
+
+
 
 \item Prototype 2 does
 extends current prolog-0.2.0.1
