Added Prolog working in proto1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1292,3 +1292,18 @@ month = {February},
 year = {2013},
 url = {https://hackage.haskell.org/package/data-fix}
 }
+@misc{webiste:learnprolognow,
+title = {Learn Prolog Now},
+author = {Patrick Blackburn Johan Bos Kristina Striegnitz},
+month = {January},
+year = {2012},
+url = {http://www.learnprolognow.org/lpnpage.php?pagetype=html&pageid=lpn-htmlse5}
+}
+
+@misc{webiste:learnprolognowappend,
+title = {Learn Prolog Now},
+author = {Patrick Blackburn Johan Bos Kristina Striegnitz},
+month = {January},
+year = {2012},
+url = {http://www.learnprolognow.org/lpnpage.php?pagetype=html&pageid=lpn-htmlse24}
+}
