More work on unbcthesis.cls : work on non-exclusive license page.

--- a/toDo.tex
+++ b/toDo.tex
@@ -78,7 +78,8 @@
   http://www2.parc.com/csl/groups/sda/projects/reflection96/docs/malenfant/malenfant.pdf 
   
 \item [\textbf{David}]
-\item Review Chapter 1
+\item Clean up the non-exclusive license page in unbcthesis.cls
+\item Incorporate unbcthesis.cls into Mehul's work.
 \item Review Chapter 2
 \item Review Chapter 3
 \item Review Chapter 4
